# ckb-commander

./: .buildinfo  .gitignore  README.md  README.rst  README_template.rst  ckb_next_desktop_indicator.py  ckb_scripts.py  debug.py  pyproject.toml  setup.cfg  tox.ini
.doctrees/: environment.pickle
_modules/: python_project_boilerplate.html
_modules/ckb_commander/: device.html
_sources/: index.rst.txt
ckb_commander/: __init__.py  active_window.py  ckbpipe.py  cli.py  colors.py  device.py  polling.py  workspace_indicator.py
ckb_scripts/: ckbpipe.py  cli.py  colors.py  keys.py  workspace_indicator.py
docs/: conf.py
docs/_build/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_modules/: index.html  pathlib.html
docs/_build/_modules/ckb_commander/: device.html
tests/: test_device.py
typings/ewmh/: __init__.pyi  ewmh.pyi
typings/webcolors/: __init__.pyi
typings/webcolors/click/: __init__.pyi
