[tool.poetry]
name = "ckb_commander"
version = "0.1.0"
description = "Control your Corsair keyboard via the ckb-next-daemon"
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/ckb-commander"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
ewmh = "^0.1.6"
webcolors = "^1.12"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
readme-patcher = "^0.6.0"

[build-system]
requires = ["poetry>=1.2.0b2"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
"ckb-commander.py" = "ckb_commander.cli:main"
