[tool.poetry]
name = "ckb_commander"
version = "0.1.0"
description = "Control your Corsair keyboard via the ckb-next-daemon"
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/ckb-commander"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
ewmh = "^0"
webcolors = "^1"
click = "^8"
rich = "^13"

[tool.poetry.group.dev.dependencies]
tox = "^4"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"ckb-commander.py" = "ckb_commander.cli:main"
